Remove policy api
